[package]
name = "versioned-file"
version = "0.1.0"
edition = "2021"
description = "library for adding versions and upgrade schemes to files"
license = "MIT"
repository = "https://github.com/DavidVorick/versioned-file"

[dependencies]
anyhow = "1.0"
async-std = {version = "1.12", features = ["attributes"]}
testdir = "0.7.0"
